--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -37,7 +37,7 @@
             //box-shadow: rgba(17, 12, 46, 0.15) 0px 24px 50px 0px;
             a {
                 h3 {
-                    background: rgba(var(--green-rgb), .1);
+                    //background: rgba(var(--green-rgb), .1);
                 }
             }
         }
